--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a href="index.html"> Home </a></li>
-        <li><a href="images.html"> Images </a></li>
+        <li><a href="files/images.html">Images</a></li>
     </ul>
 </nav>
 <h1> Contact</h1>
