--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <nav>
     <ul>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="images.html">Images</a></li>
+        <li><a href="files/images.html">Images</a></li>
     </ul>
 </nav>
 <p>It's My Page</p>
