--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Home</title>
+</head>
+
+<body>
 <h1> Home </h1>
 <nav>
     <ul>
@@ -6,3 +14,6 @@
     </ul>
 </nav>
 <p>It's My Page</p>
+</body>
+
+</html>
