js lesson files

--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 
 <head>
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 </head>
 
 <body>
-<h1> Home </h1>
-<nav>
-    <ul>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="files/images.html">Images</a></li>
-    </ul>
-</nav>
-<p>It's My Page</p>
-</body>
+     
+ </body>
 
 </html>
